--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,7 @@
-
-
-
 baseurl = "https://pinkowl.github.io"
 languageCode = "en-us"
 title = "Pink Owl Design"
-#theme = "hugo-creative-theme"
+theme = "hugo-creative-theme"
 googleAnalytics = ""
 
 [params]
@@ -32,12 +29,12 @@ googleAnalytics = ""
 
 	# Navigation
 	[params.navigation]
-		brand = "Hugo Creative Theme"
+		#brand = ""
 
 		[params.navigation.links]
 			about     = "About"
-			services  = "Services"
-			portfolio = "Portfolio"
+			services  = "Social"
+			#portfolio = "Portfolio"
 			contact   = "Contact"
 
 
@@ -58,27 +55,31 @@ googleAnalytics = ""
 
 	# Service section
 	[params.services]
-		headline = "Here to help you!"
+		headline = "Look, Like and #Tag!"
 
         [[params.services.list]]
-            icon = "fa-twitter"
-            title = "Follow us on Twitter at Pink_Owl_Design"
-            description = "New content posted regularly showcasing new designs"
-
-        [[params.services.list]]
-			icon = "fa-behance"
 			title = "Behance Portfolio"
-			description = "Check out Behance for a more extensive portfolio of our works"
+			description = "Check us out on Behance for an extensive portfolio of our works."
+			link = "https://www.behance.net/stardustedb29c"
+			fontAwesome = 'fa fa-4x fa-behance wow bounceIn text-primary'
 
 		[[params.services.list]]
-            icon = "fa-smile"
-            title = "Great customer service"
-            description = "Attention to detail sets us apart"
+            title = "Facebook"
+            description = "Like and scribble on our wall"
+			fontAwesome = 'fa fa-4x fa-facebook-square wow bounceIn text-primary'
+			link = "https://www.facebook.com/Pink-Owl-Design-2065631860380240"
 
-        [[params.services.list]]
-            icon = "fa-heart"
-            title = "Made with Love"
-            description = "Personal creations for you"
+		[[params.services.list]]
+            title = "Twitter"
+            description = "Follow us @Pink_Owl_Design"
+			fontAwesome = 'fa fa-4x fa-twitter wow bounceIn text-primary'
+			link = "https://twitter.com/Pink_Owl_Design"
+
+        #[[params.services.list]]
+        #    icon = "fa-heart"
+        #    title = "Made with Love"
+        #    description = "Personal creations for you"
+		#	fontAwesome = 'fa fa-4x fa-heart wow bounceIn text-primary'
 
 
     # Portfolio modals
@@ -99,8 +100,8 @@ googleAnalytics = ""
 	# Contact section
 	[params.contact]
 		headline = "Let's Get In Touch!"
-		description = "Ready to start your next project with us? Want a gorgeous cake for that special occasion? That's great! Give us a call or send us an email and we will get back to you as soon as possible!"
-		phone = "+44 00 7522714015"
+		description = "Ready to start your next project with us? Want a gorgeous cake for that special occasion? That's great! Give us a call or send us an email and we will get back to you."
+		phone = "+44 (0) 7522 714 015"
 		email = "pinkowl_design@outlook.com"
 
 	# Google Maps section
